force-app/main/default/objects/Levy__c/fields/Amount_Held__c.field-meta.xml
<CustomField>
    <fullName>Amount_Held__c</fullName>
    <inlineHelpText>Amount that will not be paid</inlineHelpText>
    <label>Amount Held</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>