force-app/main/default/objects/Levy__c/fields/Basis_for_Claim__c.field-meta.xml
<CustomField>
    <fullName>Basis_for_Claim__c</fullName>
    <label>Basis for Claim</label>
    <length>255</length>
    <type>Text</type>
</CustomField>