force-app/main/default/objects/Levy__c/fields/Claim_of_Exemption_Filed__c.field-meta.xml
<CustomField>
    <fullName>Claim_of_Exemption_Filed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Claim of Exemption Filed</label>
    <type>Checkbox</type>
</CustomField>