force-app/main/default/objects/Levy__c/fields/Court_Determining__c.field-meta.xml
<CustomField>
    <fullName>Court_Determining__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>reference to Office where Record Type = Courthouse</description>
    <label>Court Determining</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Office__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Courthouse</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Office__c</referenceTo>
    <relationshipLabel>Levies</relationshipLabel>
    <relationshipName>Levies</relationshipName>
    <type>Lookup</type>
</CustomField>