force-app/main/default/objects/Levy__c/fields/Date_Conformed_Copy_of_Opp_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Conformed_Copy_of_Opp_Received__c</fullName>
    <description>Date Received Conformed Copy of Opposition (from court)</description>
    <label>Date Conformed Copy of Opp Received</label>
    <type>Date</type>
</CustomField>