force-app/main/default/objects/Levy__c/fields/Date_Expires__c.field-meta.xml
<CustomField>
    <fullName>Date_Expires__c</fullName>
    <description>Default = Date served on Garnishee + 1 year</description>
    <inlineHelpText>Defaults to 1 year from the Date Response Due from Garnishee</inlineHelpText>
    <label>Date Expires</label>
    <type>Date</type>
</CustomField>