force-app/main/default/objects/Levy__c/fields/Date_Filed_with_Levying_Officer__c.field-meta.xml
<CustomField>
    <fullName>Date_Filed_with_Levying_Officer__c</fullName>
    <label>Date Filed with Levying Officer</label>
    <type>Date</type>
</CustomField>