force-app/main/default/objects/Levy__c/fields/Date_Received_from_Outside_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Date_Received_from_Outside_Vendor__c</fullName>
    <label>Date Received from Outside Vendor</label>
    <type>Date</type>
</CustomField>