force-app/main/default/objects/Levy__c/fields/Date_Served_on_Lab_Com__c.field-meta.xml
<CustomField>
    <fullName>Date_Served_on_Lab_Com__c</fullName>
    <label>Date Served on Lab Com</label>
    <type>Date</type>
</CustomField>