force-app/main/default/objects/Levy__c/fields/DLSE_Levying_Officer__c.field-meta.xml
<CustomField>
    <fullName>DLSE_Levying_Officer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to Internal Employee. 
Default = Lead JEU Deputy on case associated with the current judgement.</description>
    <label>DLSE Levying Officer</label>
    <referenceTo>DIR_Employee__c</referenceTo>
    <relationshipLabel>Levies (DLSE Levying Officer)</relationshipLabel>
    <relationshipName>Levies1</relationshipName>
    <type>Lookup</type>
</CustomField>