force-app/main/default/objects/Levy__c/fields/Hold_on_Levy__c.field-meta.xml
<CustomField>
    <fullName>Hold_on_Levy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hold on Levy</label>
    <type>Checkbox</type>
</CustomField>