force-app/main/default/objects/Levy__c/fields/Levying_Officer__c.field-meta.xml
<CustomField>
    <fullName>Levying_Officer__c</fullName>
    <label>Levying Officer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>