force-app/main/default/objects/Levy__c/fields/Notice_of_Joint_Accountholder__c.field-meta.xml
<CustomField>
    <fullName>Notice_of_Joint_Accountholder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked by default automatically if the Levy Response type = Memorandum of Garnishee with Notice of Joint Accountholder</description>
    <label>Notice of Joint-Accountholder</label>
    <type>Checkbox</type>
</CustomField>