force-app/main/default/objects/Levy__c/fields/RelatedJudgemet__c.field-meta.xml
<CustomField>
    <fullName>RelatedJudgemet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>One to Many relationship between Judgement and Levies</description>
    <label>Judgment</label>
    <referenceTo>Judgement__c</referenceTo>
    <relationshipLabel>Levies</relationshipLabel>
    <relationshipName>Levies</relationshipName>
    <type>Lookup</type>
</CustomField>