force-app/main/default/objects/Levy__c/fields/Third_Party_Claim_Filed__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Claim_Filed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Third Party Claim Filed</label>
    <type>Checkbox</type>
</CustomField>