force-app/main/default/objects/Levy__c/recordTypes/Claim_of_Exemption_Third_Party_Claim.recordType-meta.xml
<RecordType>
    <fullName>Claim_of_Exemption_Third_Party_Claim</fullName>
    <active>true</active>
    <label>Claim of Exemption/Third-Party Claim</label>
</RecordType>