force-app/main/default/objects/Levy__c/recordTypes/Levy_Response.recordType-meta.xml
<RecordType>
    <fullName>Levy_Response</fullName>
    <active>true</active>
    <label>Levy Response</label>
</RecordType>