force-app/main/default/objects/Levy__c/recordTypes/SB588_Levy.recordType-meta.xml
<RecordType>
    <fullName>SB588_Levy</fullName>
    <active>true</active>
    <label>SB588 Levy</label>
</RecordType>